--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 consultas, reclamações e solicitações 
                 eficientemente. Organizei produtos, seguindo 
                 diretrizes da empresa. Demonstrei habilidades de 
-                comunicação e soube enfrentei desafios de forma 
+                comunicação e soube enfrentar desafios de forma 
                 profissional.</p>
             </div>
             <div class="w3-container">
