--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Plasútil Industria e Comércio de Plásticos Ltda.
               </b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2020 - Maio 2021</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2020 - Abril 2021</h6>
               <p>Embalador - Realizei preparação e embalagem 
                 de produtos, selecionando materiais adequados e 
                 seguindo instruções. Garanti embalagens 
