--- a/index.html
+++ b/index.html
@@ -255,26 +255,34 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>FIAP</b></h5>
+              <h5 class="w3-opacity"><b>Faculdade de Informática e Administração Paulista (FIAP) - EAD</b></h5>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2021 - Junho 2021 -</h6>
               <p>
-                Tecnólogo em Defesa Cibernética na Faculdade de Informática e Administração Paulista (FIAP).<br>Situação: incompleto.
+                Tecnólogo em Defesa Cibernética.<br>Situação: incompleto.
               </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>FATEC</b></h5>
+              <h5 class="w3-opacity"><b>FATEC - Bauru-SP</b></h5>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2016 - Dezembro 2018</h6>
               <p>
-                Tecnólogo em Banco de Dados em Bauru-SP.<br>Situação: incompleto.
+                Tecnólogo em Banco de Dados.<br>Situação: incompleto.
               </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Instituição Toledo de Ensino (ITE)</b></h5>
+              <h5 class="w3-opacity"><b>FATEC - Bauru-SP</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2015 - Dezembro 2015</h6>
+              <p>
+                Tecnólogo em Redes de Computadores.<br>Situação: incompleto.
+              </p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Instituição Toledo de Ensino (ITE) - Bauru-SP</b></h5>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2016 - Dezembro 2018</h6>
               <p>
-                Graduação em Sistema de Informação em Bauru - SP.<br>Situação: incompleto.
+                Graduação em Sistema de Informação.<br>Situação: incompleto.
               </p>
               <hr>
             </div>
